--- a/WaveDemo.Audio/packages.config
+++ b/WaveDemo.Audio/packages.config
@@ -1,11 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SharpDX" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.Direct3D11" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.DXGI" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.Toolkit" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.Toolkit.Audio" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.Toolkit.Game" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.Toolkit.Graphics" version="2.6.3" targetFramework="win81" />
-  <package id="SharpDX.XAudio2" version="2.6.3" targetFramework="win81" />
+  <package id="System.Numerics.Vectors" version="4.0.0" targetFramework="win81" userInstalled="true" />
 </packages>
