--- a/WaveDemo/packages.config
+++ b/WaveDemo/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.ApplicationInsights" version="0.13.0-build26067" targetFramework="win81" />
-  <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.13.0-build26067" targetFramework="win81" />
-  <package id="Microsoft.ApplicationInsights.WindowsStore" version="0.13.0-build26067" targetFramework="win81" />
-  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.14-beta" targetFramework="win81" />
+  <package id="Microsoft.ApplicationInsights" version="0.14.3-build00177" targetFramework="win81" userInstalled="true" />
+  <package id="Microsoft.ApplicationInsights.PersistenceChannel" version="0.14.3-build00177" targetFramework="win81" userInstalled="true" />
+  <package id="Microsoft.ApplicationInsights.WindowsApps" version="0.14.3-build00177" targetFramework="win81" userInstalled="true" />
+  <package id="Microsoft.Diagnostics.Tracing.EventSource.Redist" version="1.1.16-beta" targetFramework="win81" userInstalled="true" />
+  <package id="System.Numerics.Vectors" version="4.0.0" targetFramework="win81" userInstalled="true" />
 </packages>
